# ResumeEZ_backend

./: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 04633d0967d8_add_otp_columns_to_users.py  0555b9bb0568_made_otp_and_otpexpire_field_nullable.py  08973ba6996a_updated_tables_and_fields.py  30e6599bdcef_updated_fields_in_tables.py  38bbcffef685_initial_migration.py  4777fbc27d79_made_role_and_password_nullable.py  71a19881e0e7_init_migration.py  a1b2c3d4e5f6_add_ai_analysis_columns.py  a82288bbb529_removed_unwanted_models.py  b5b8db157b1d_removed_default_value_in_role_field.py  bf2b25736d2d_updated_fields_in_resume_model.py  c3f1a2b4d5e6_add_missing_recruiter_profile_columns.py  d7e8f9a0b1c2_make_user_role_nullable.py  e1c3a8691ccf_remove_field_like_location_required_.py  e98aa7228052_add_defaults_to_updated_at.py  f1e2d3c4b5a6_add_recruiter_notes.py
src/: index.py
src/NLP_services/: jd_parser.py  ontology_service.py  resume_normalizer.py  roadmap_generator.py  scoring_engine.py  skill_extractor.py  skill_matcher.py  text_normalizer.py
src/config/: db.py  db_test.py  env_config.py  supabase_config.py
src/middlewares/: auth_middleware.py
src/models/: __init__.py  candidate_profile_model.py  candidate_resumes_model.py  candidates_model.py  email_notifications_model.py  email_verifications_model.py  external_application_model.py  hr_uploaded_resumes_model.py  job_application_model.py  job_model.py  jobs_model.py  learning_roadmap_model.py  learning_roadmaps_model.py  password_reset_tokens_model.py  recruiter_model.py  recruiters_model.py  resume_comparisons_model.py  resume_job_analysis_model.py  resume_model.py  shortlist_model.py  user_model.py
src/routes/: application_routes.py  (+9 more)
stage2/: 01_generate_ner_data.py  02_init_config.py  03_train_ner.py  04_verify_ner.py  README.md  config.cfg  extract_skills_v2.py
stage3/: 01_extract_pairs.py  02_train_embeddings.py  03_verify_model.py  README.md
(+36 files in other folders)
