[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=4.1.2",
    "fastapi>=0.124.4",
    "google-auth>=2.48.0",
    "nh3>=0.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pypdf2>=3.0.1",
    "python-docx>=0.8.11",
    "rapidfuzz>=3.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "supabase>=2.27.2",
    "uvicorn[standard]>=0.38.0",
    "ollama>=0.6.1",
]
